fix: theme switch dark mode failed

--- a/styles/base.css
+++ b/styles/base.css
@@ -1,6 +1,5 @@
 @layer base {
   :root {
-    color-scheme: light dark;
     @apply scroll-smooth;
   }
 
@@ -20,6 +19,18 @@
   ::after,
   ::before {
     @apply border-muted/20;
+  }
+
+  html {
+    color-scheme: light dark;
+  }
+
+  html[data-theme='light'] {
+    color-scheme: light;
+  }
+
+  html[data-theme='dark'] {
+    color-scheme: dark;
   }
 
   body {
